<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/google_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <ImageView
            android:layout_marginTop="15dp"
            android:id="@+id/imgProfile"
            android:layout_height="300px"
            android:layout_width="300px"
            android:layout_marginBottom="30dp"
            android:contentDescription="User's profile image"/>

        <ProgressBar
            android:layout_marginTop="-140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="false"
            android:layout_marginBottom="30dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />


        <TextView
            android:id="@+id/surname"
            android:textSize="30dp"
            style="@style/ThemeOverlay.MyTextDetail" />
        <TextView
            android:id="@+id/name"
            android:textSize="30dp"
            style="@style/ThemeOverlay.MyTextDetail" />

    </LinearLayout>






    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_100">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:background="@color/colorPrimary"
                android:textColor="@color/activity_login_title_color">
            </Button>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>